--- a/.github/workflows/push-trigger.yml
+++ b/.github/workflows/push-trigger.yml
@@ -92,28 +92,8 @@ jobs:
       OSSRH_TOKEN: ${{ secrets.OSSRH_TOKEN }}
       GPG_SECRET: ${{ secrets.GPG_SECRET }}
       SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK }}
-
-  trivy_scan:
-    needs: build-dockers
-    runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        include:
-          - SERVICE_NAME: 'pre-registration-application-service'
-          - SERVICE_NAME: 'pre-registration-batchjob'
-          - SERVICE_NAME: 'pre-registration-datasync-service'
-          - SERVICE_NAME: 'pre-registration-captcha-service'
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
-      - name: Run Trivy vulnerability scanner
-        uses: aquasecurity/trivy-action@master
-        with:
-          image-ref: 'docker.io/your_dockerhub_namespace/${{ matrix.SERVICE_NAME }}:latest'
-          format: 'sarif'
-          output: 'trivy-report-${{ matrix.SERVICE_NAME }}.sarif'
-      - name: Upload SARIF file
-        uses: actions/upload-artifact@v3
-        with:
-          name: trivy-report-${{ matrix.SERVICE_NAME }}
-          path: trivy-report-${{ matrix.SERVICE_NAME }}.sarif
+  call-trivy-scan:
+    uses: mosip/kattu/.github/workflows/trivy.yml@develop
+    with:
+            service_name: 'pre-registration-application-service'
+            version: 'latest'
