--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -1,49 +1,61 @@
-name: "CodeQL Analysis for Java"
+name: "CodeQL Advanced"
 
 on:
   push:
     branches:
-      - develop  # Adjust to match your default or target branches
+      - "master"
+      - "develop"
+      - "release-*"
   pull_request:
     branches:
-      - develop  # Adjust to match your target branches
+      - "master"
+      - "develop"
+      - "release-*"
   schedule:
-    - cron: "0 2 * * 0"  # Optional: Weekly analysis on Sunday at 2 AM
+    - cron: '32 0 * * 1'
 
 jobs:
   analyze:
-    name: Analyze Java Code
-    runs-on: ubuntu-latest
-
+    name: Analyze (${{ matrix.language }})
+    runs-on: ${{ (matrix.language == 'swift' && 'macos-latest') || 'ubuntu-latest' }}
     permissions:
+      # required for all workflows
+      security-events: write
+
+      # required to fetch internal or private CodeQL packs
+      packages: read
+
+      # only required for workflows in private repositories
       actions: read
       contents: read
-      security-events: write  # Required for uploading CodeQL results
 
     strategy:
       fail-fast: false
       matrix:
-        language: [java]  # This workflow is for Java analysis
-
+        include:
+        - language: java-kotlin
+          build-mode: none # This mode only analyzes Java. Set this to 'autobuild' or 'manual' to analyze Kotlin too.
     steps:
-    # Step 1: Check out the repository
     - name: Checkout repository
-      uses: actions/checkout@v3
+      uses: actions/checkout@v4
 
-    # Step 2: Initialize CodeQL
+    # Initializes the CodeQL tools for scanning.
     - name: Initialize CodeQL
-      uses: github/codeql-action/init@v2
+      uses: github/codeql-action/init@v3
       with:
         languages: ${{ matrix.language }}
-
-    # Step 3: Build the Java code (necessary for analysis)
-    - name: Build the code
+        build-mode: ${{ matrix.build-mode }}
+    - if: matrix.build-mode == 'manual'
+      shell: bash
       run: |
-        # Example: Use Maven to build the Java project
-        mvn clean compile
+        echo 'If you are using a "manual" build mode for one or more of the' \
+          'languages you are analyzing, replace this with the commands to build' \
+          'your code, for example:'
+        echo '  make bootstrap'
+        echo '  make release'
+        exit 1
 
-    # Step 4: Perform CodeQL analysis
     - name: Perform CodeQL Analysis
-      uses: github/codeql-action/analyze@v2
+      uses: github/codeql-action/analyze@v3
       with:
-        category: security  # Results will appear in the Security tab
+        category: "/language:${{matrix.language}}"
