--- a/.github/workflows/trufflehog.yml
+++ b/.github/workflows/trufflehog.yml
@@ -16,5 +16,4 @@ jobs:
       - name: Run TruffleHog
         uses: trufflesecurity/trufflehog@v3.84.1
         with:
-          scan: filesystem
-          regex: true
+           extra_args: --only-verified
