--- a/.github/workflows/yelp.yml
+++ b/.github/workflows/yelp.yml
@@ -1,4 +1,3 @@
----
 on:
   pull_request:
     branches:
@@ -11,7 +10,21 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v1
+
       - name: Execute secret-search
+        id: secret-search
         uses: Hacks4Snacks/secret-search@main
         with:
-          fail-on-error: 'true'
+          fail-on-error: 'false' # Run even if secrets are found to report results
+
+      - name: Annotate results in PR
+        if: ${{ steps.secret-search.outputs.has-secrets == 'true' }} # Conditional based on scan results
+        run: |
+          echo "::error::Secrets detected in the codebase. Review the scan results."
+
+      - name: Add PR comment with scan results
+        if: ${{ steps.secret-search.outputs.has-secrets == 'true' }}
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: |
+          echo "Secrets were detected in the pull request. Please review them carefully." | gh pr comment --body -
