--- a/.github/workflows/regex-based_secrets_scanning.yml
+++ b/.github/workflows/regex-based_secrets_scanning.yml
@@ -21,64 +21,9 @@ jobs:
           SECRET_PATTERNS=(
             "AIza[0-9A-Za-z-_]{35}"  # Example: Google API key
             "AKIA[0-9A-Z]{16}"        # Example: AWS Access Key
-            "-----BEGIN (RSA )?PRIVATE KEY-----"  # Example: RSA private key
-            # Google API Key
-            AIza[0-9A-Za-z-_]{35}
+            "-----BEGIN (RSA )?PRIVATE KEY-----"  # Example: RSA private key"
+            "password\s*=\s*["'].*?["']"
             
-            # AWS Access Key ID
-            AKIA[0-9A-Z]{16}
-            
-            # AWS Secret Access Key
-            (?:AWS|aws|Aws)?_?SECRET_?ACCESS_?KEY[^\\n]*
-            
-            # RSA Private Key
-            -----BEGIN (RSA )?PRIVATE KEY-----
-            
-            # SSH Private Key
-            -----BEGIN OPENSSH PRIVATE KEY-----
-            
-            # Generic Private Key
-            -----BEGIN PRIVATE KEY-----
-            
-            # Password in Code
-            password\s*=\s*["'].*?["']
-            
-            # Access Token
-            (access_token|ACCESS_TOKEN|AccessToken)[\s]*[:=][\s]*["'][a-zA-Z0-9._-]+["']
-            
-            # Slack Token
-            xox[baprs]-[a-zA-Z0-9]{10,48}
-            
-            # Google OAuth Access Token
-            ya29\.[0-9A-Za-z\-_]+
-            
-            # Stripe API Key
-            sk_live_[0-9a-zA-Z]{24}
-            
-            # GitHub Token
-            ghp_[0-9a-zA-Z]{36}
-            
-            # Generic Bearer Token
-            Bearer[\s]+[a-zA-Z0-9\-_]+\.[a-zA-Z0-9\-_]+\.[a-zA-Z0-9\-_]+
-            
-            # Twilio API Key
-            SK[0-9a-fA-F]{32}
-            
-            # Mailchimp API Key
-            [a-f0-9]{32}-us[0-9]{1,2}
-            
-            # Generic API Key
-            api_key[\s]*[:=][\s]*["'][a-zA-Z0-9-_]+["']
-            
-            # Database URL
-            jdbc:[a-z]+:\/\/[a-zA-Z0-9_\-.:]+:[0-9]+\/[a-zA-Z0-9_\-]+
-            
-            # Cloudinary API Key
-            cloudinary:\/\/[0-9]+:[a-zA-Z0-9]+@[a-zA-Z0-9]+
-            
-            # SendGrid API Key
-            SG\.[a-zA-Z0-9_-]{22}\.[a-zA-Z0-9_-]{43}
-
           )
 
           # Loop through each regex pattern and search in files
