--- a/.github/workflows/trufflehog.yml
+++ b/.github/workflows/trufflehog.yml
@@ -22,6 +22,9 @@ jobs:
         python -m pip install --upgrade pip
         pip install truffleHog
 
+    - name: Add truffleHog to PATH
+      run: echo "::add-path::$(python -m site --user-base)/bin"
+
     - name: Run truffleHog in regex mode
       run: truffleHog --regex --json .
 
