--- a/.github/workflows/trufflehog.yml
+++ b/.github/workflows/trufflehog.yml
@@ -113,4 +113,4 @@ jobs:
           'AIza[0-9A-Za-z-_]{35}'  # Google API Key
           'AIza[0-9A-Za-z-_]{35}'  # Google API Key
           'AIza[0-9A-Za-z-_]{35}'  # Google API Key
-          'AIza[0-9A-Za-z-_]{35}'  # Google )
+          'AIza[0-9A-Za-z-_]{35}' ) # Google )
