--- a/.github/workflows/trufflehog.yml
+++ b/.github/workflows/trufflehog.yml
@@ -12,105 +12,11 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v2
 
+    - name: Install detect-secrets
+      run: |
+        pip install detect-secrets
+
     - name: Scan for leaked secrets
       run: |
-        # Define regex patterns for common secrets
-        patterns=(
-          'AKIA[0-9A-Z]{16}'  # AWS Access Key ID
-          'aws_secret_access_key'  # AWS Secret Access Key
-          '-----BEGIN RSA PRIVATE KEY-----'  # RSA private key
-          '-----BEGIN OPENSSH PRIVATE KEY-----'  # OpenSSH private key
-          '-----BEGIN PGP PRIVATE KEY BLOCK-----'  # PGP private key block
-          'AIza[0-9A-Za-z-_]{35}'  # Google API Key
-          'AIza[0-9A-Za-z-_]{35}'  # Google API Key
-          'AIza[0-9A-Za-z-_]{35}'  # Google API Key
-          'AIza[0-9A-Za-z-_]{35}'  # Google API Key
-          'AIza[0-9A-Za-z-_]{35}'  # Google API Key
-          'AIza[0-9A-Za-z-_]{35}'  # Google API Key
-          'AIza[0-9A-Za-z-_]{35}'  # Google API Key
-          'AIza[0-9A-Za-z-_]{35}'  # Google API Key
-          'AIza[0-9A-Za-z-_]{35}'  # Google API Key
-          'AIza[0-9A-Za-z-_]{35}'  # Google API Key
-          'AIza[0-9A-Za-z-_]{35}'  # Google API Key
-          'AIza[0-9A-Za-z-_]{35}'  # Google API Key
-          'AIza[0-9A-Za-z-_]{35}'  # Google API Key
-          'AIza[0-9A-Za-z-_]{35}'  # Google API Key
-          'AIza[0-9A-Za-z-_]{35}'  # Google API Key
-          'AIza[0-9A-Za-z-_]{35}'  # Google API Key
-          'AIza[0-9A-Za-z-_]{35}'  # Google API Key
-          'AIza[0-9A-Za-z-_]{35}'  # Google API Key
-          'AIza[0-9A-Za-z-_]{35}'  # Google API Key
-          'AIza[0-9A-Za-z-_]{35}'  # Google API Key
-          'AIza[0-9A-Za-z-_]{35}'  # Google API Key
-          'AIza[0-9A-Za-z-_]{35}'  # Google API Key
-          'AIza[0-9A-Za-z-_]{35}'  # Google API Key
-          'AIza[0-9A-Za-z-_]{35}'  # Google API Key
-          'AIza[0-9A-Za-z-_]{35}'  # Google API Key
-          'AIza[0-9A-Za-z-_]{35}'  # Google API Key
-          'AIza[0-9A-Za-z-_]{35}'  # Google API Key
-          'AIza[0-9A-Za-z-_]{35}'  # Google API Key
-          'AIza[0-9A-Za-z-_]{35}'  # Google API Key
-          'AIza[0-9A-Za-z-_]{35}'  # Google API Key
-          'AIza[0-9A-Za-z-_]{35}'  # Google API Key
-          'AIza[0-9A-Za-z-_]{35}'  # Google API Key
-          'AIza[0-9A-Za-z-_]{35}'  # Google API Key
-          'AIza[0-9A-Za-z-_]{35}'  # Google API Key
-          'AIza[0-9A-Za-z-_]{35}'  # Google API Key
-          'AIza[0-9A-Za-z-_]{35}'  # Google API Key
-          'AIza[0-9A-Za-z-_]{35}'  # Google API Key
-          'AIza[0-9A-Za-z-_]{35}'  # Google API Key
-          'AIza[0-9A-Za-z-_]{35}'  # Google API Key
-          'AIza[0-9A-Za-z-_]{35}'  # Google API Key
-          'AIza[0-9A-Za-z-_]{35}'  # Google API Key
-          'AIza[0-9A-Za-z-_]{35}'  # Google API Key
-          'AIza[0-9A-Za-z-_]{35}'  # Google API Key
-          'AIza[0-9A-Za-z-_]{35}'  # Google API Key
-          'AIza[0-9A-Za-z-_]{35}'  # Google API Key
-          'AIza[0-9A-Za-z-_]{35}'  # Google API Key
-          'AIza[0-9A-Za-z-_]{35}'  # Google API Key
-          'AIza[0-9A-Za-z-_]{35}'  # Google API Key
-          'AIza[0-9A-Za-z-_]{35}'  # Google API Key
-          'AIza[0-9A-Za-z-_]{35}'  # Google API Key
-          'AIza[0-9A-Za-z-_]{35}'  # Google API Key
-          'AIza[0-9A-Za-z-_]{35}'  # Google API Key
-          'AIza[0-9A-Za-z-_]{35}'  # Google API Key
-          'AIza[0-9A-Za-z-_]{35}'  # Google API Key
-          'AIza[0-9A-Za-z-_]{35}'  # Google API Key
-          'AIza[0-9A-Za-z-_]{35}'  # Google API Key
-          'AIza[0-9A-Za-z-_]{35}'  # Google API Key
-          'AIza[0-9A-Za-z-_]{35}'  # Google API Key
-          'AIza[0-9A-Za-z-_]{35}'  # Google API Key
-          'AIza[0-9A-Za-z-_]{35}'  # Google API Key
-          'AIza[0-9A-Za-z-_]{35}'  # Google API Key
-          'AIza[0-9A-Za-z-_]{35}'  # Google API Key
-          'AIza[0-9A-Za-z-_]{35}'  # Google API Key
-          'AIza[0-9A-Za-z-_]{35}'  # Google API Key
-          'AIza[0-9A-Za-z-_]{35}'  # Google API Key
-          'AIza[0-9A-Za-z-_]{35}'  # Google API Key
-          'AIza[0-9A-Za-z-_]{35}'  # Google API Key
-          'AIza[0-9A-Za-z-_]{35}'  # Google API Key
-          'AIza[0-9A-Za-z-_]{35}'  # Google API Key
-          'AIza[0-9A-Za-z-_]{35}'  # Google API Key
-          'AIza[0-9A-Za-z-_]{35}'  # Google API Key
-          'AIza[0-9A-Za-z-_]{35}'  # Google API Key
-          'AIza[0-9A-Za-z-_]{35}'  # Google API Key
-          'AIza[0-9A-Za-z-_]{35}'  # Google API Key
-          'AIza[0-9A-Za-z-_]{35}'  # Google API Key
-          'AIza[0-9A-Za-z-_]{35}'  # Google API Key
-          'AIza[0-9A-Za-z-_]{35}'  # Google API Key
-          'AIza[0-9A-Za-z-_]{35}'  # Google API Key
-          'AIza[0-9A-Za-z-_]{35}'  # Google API Key
-          'AIza[0-9A-Za-z-_]{35}'  # Google API Key
-          'AIza[0-9A-Za-z-_]{35}'  # Google API Key
-          'AIza[0-9A-Za-z-_]{35}'  # Google API Key
-          'AIza[0-9A-Za-z-_]{35}'  # Google API Key
-          'AIza[0-9A-Za-z-_]{35}'  # Google API Key
-          'AIza[0-9A-Za-z-_]{35}'  # Google API Key
-          'AIza[0-9A-Za-z-_]{35}'  # Google API Key
-          'AIza[0-9A-Za-z-_]{35}'  # Google API Key
-          'AIza[0-9A-Za-z-_]{35}'  # Google API Key
-          'AIza[0-9A-Za-z-_]{35}'  # Google API Key
-          'AIza[0-9A-Za-z-_]{35}'  # Google API Key
-          'AIza[0-9A-Za-z-_]{35}'  # Google API Key
-          'AIza[0-9A-Za-z-_]{35}'  # Google API Key
-          'AIza[0-9A-Za-z-_]{35}' ) # Google )
+        detect-secrets scan > .secrets.baseline
+        detect-secrets audit .secrets.baseline
