--- a/.github/workflows/PR-CHECK.yml
+++ b/.github/workflows/PR-CHECK.yml
@@ -1,4 +1,4 @@
-name: Detect Leaked Secrets2
+name: Detect Leaked Secrets 1
 
 on:
   pull_request:
@@ -15,6 +15,10 @@ jobs:
     - name: Install detect-secrets
       run: |
         pip install detect-secrets
+
+    - name: Create baseline file
+      run: |
+        detect-secrets scan > .secrets.baseline
 
     - name: Scan for leaked secrets in PR
       run: |
