--- a/.github/workflows/PR-CHECK.yml
+++ b/.github/workflows/PR-CHECK.yml
@@ -1,4 +1,4 @@
-name: Detect Leaked Secrets 3
+name: Detect Leaked Secrets 4
 
 on:
   pull_request:
@@ -18,4 +18,11 @@ jobs:
 
     - name: Scan for leaked secrets in PR
       run: |
-        detect-secrets scan
+        detect-secrets scan > result.txt
+        if grep -q 'Secret' result.txt; then
+          echo "Secrets detected!"
+          cat result.txt
+          exit 1
+        else
+          echo "No secrets detected."
+        fi
